CHTL/generated/chtljs/grammar/CHTLJSParser.cpp

// Generated from grammar/CHTLJS.g4 by ANTLR 4.13.1


#include "CHTLJSListener.h"
#include "CHTLJSVisitor.h"

#include "CHTLJSParser.h"


using namespace antlrcpp;
using namespace chtl.antlr;

using namespace antlr4;

namespace {

struct CHTLJSParserStaticData final {
  CHTLJSParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CHTLJSParserStaticData(const CHTLJSParserStaticData&) = delete;
  CHTLJSParserStaticData(CHTLJSParserStaticData&&) = delete;
  CHTLJSParserStaticData& operator=(const CHTLJSParserStaticData&) = delete;
  CHTLJSParserStaticData& operator=(CHTLJSParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag chtljsParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CHTLJSParserStaticData *chtljsParserStaticData = nullptr;

void chtljsParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (chtljsParserStaticData != nullptr) {
    return;
  }
#else
  assert(chtljsParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CHTLJSParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "expressionStatement", "declarationStatement", 
      "controlStatement", "chthljsStatement", "expression", "assignmentExpression", 
      "conditionalExpression", "logicalOrExpression", "logicalAndExpression", 
      "equalityExpression", "relationalExpression", "additiveExpression", 
      "multiplicativeExpression", "unaryExpression", "postfixExpression", 
      "primaryExpression", "literal", "identifier", "chthljsSelector", "selectorContent", 
      "selector", "property", "index", "functionExpression", "parameterList", 
      "objectExpression", "propertyAssignment", "propertyName", "arrayExpression", 
      "parenthesizedExpression", "variableDeclaration", "variableDeclarator", 
      "functionDeclaration", "ifStatement", "forStatement", "whileStatement", 
      "switchStatement", "caseClause", "defaultClause", "fileloaderStatement", 
      "listenStatement", "delegateStatement", "animateStatement", "virStatement", 
      "routerStatement", "utilStatement", "block", "argumentList", "assignmentOperator"
    },
    std::vector<std::string>{
      "", "'var'", "'let'", "'const'", "'function'", "'if'", "'else'", "'for'", 
      "'while'", "'switch'", "'case'", "'default'", "'break'", "'continue'", 
      "'return'", "'then'", "'fileloader'", "'listen'", "'delegate'", "'animate'", 
      "'vir'", "'router'", "'util'", "'iNeverAway'", "'{'", "'}'", "'['", 
      "']'", "'('", "')'", "';'", "','", "'.'", "':'", "'\\u003F'", "'+'", 
      "'-'", "", "'/'", "'%'", "'&&'", "'||'", "'!'", "'>'", "'<'", "'>='", 
      "'<='", "'=='", "'!='", "'+='", "'-='", "'*='", "'/='", "'%='", "'#'", 
      "", "", "", "", "", "'null'", "'undefined'"
    },
    std::vector<std::string>{
      "", "VAR", "LET", "CONST", "FUNCTION", "IF", "ELSE", "FOR", "WHILE", 
      "SWITCH", "CASE", "DEFAULT", "BREAK", "CONTINUE", "RETURN", "THEN", 
      "FILELOADER", "LISTEN", "DELEGATE", "ANIMATE", "VIR", "ROUTER", "UTIL", 
      "INEVERAWAY", "LEFT_BRACE", "RIGHT_BRACE", "LEFT_BRACKET", "RIGHT_BRACKET", 
      "LEFT_PAREN", "RIGHT_PAREN", "SEMICOLON", "COMMA", "DOT", "COLON", 
      "QUESTION", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", "AND", 
      "OR", "NOT", "GREATER", "LESS", "GREATER_EQUAL", "LESS_EQUAL", "EQUAL_EQUAL", 
      "NOT_EQUAL", "PLUS_EQUAL", "MINUS_EQUAL", "MULTIPLY_EQUAL", "DIVIDE_EQUAL", 
      "MODULO_EQUAL", "HASH", "ASTERISK", "DOUBLE_BRACE", "STRING", "NUMBER", 
      "BOOLEAN", "NULL", "UNDEFINED", "IDENTIFIER", "COMMENT", "MULTILINE_COMMENT", 
      "WHITESPACE", "TILDE", "EQUAL"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  chtljsParserStaticData = staticData.release();
}

}

CHTLJSParser::CHTLJSParser(TokenStream *input) : CHTLJSParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CHTLJSParser::CHTLJSParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CHTLJSParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *chtljsParserStaticData->atn, chtljsParserStaticData->decisionToDFA, chtljsParserStaticData->sharedContextCache, options);
}

CHTLJSParser::~CHTLJSParser() {
  delete _interpreter;
}

const atn::ATN& CHTLJSParser::getATN() const {
  return *chtljsParserStaticData->atn;
}

std::string CHTLJSParser::getGrammarFileName() const {
  return "CHTLJS.g4";
}

const std::vector<std::string>& CHTLJSParser::getRuleNames() const {
  return chtljsParserStaticData->ruleNames;
}

const dfa::Vocabulary& CHTLJSParser::getVocabulary() const {
  return chtljsParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CHTLJSParser::getSerializedATN() const {
  return chtljsParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

CHTLJSParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLJSParser::ProgramContext::EOF() {
  return getToken(CHTLJSParser::EOF, 0);
}

std::vector<CHTLJSParser::StatementContext *> CHTLJSParser::ProgramContext::statement() {
  return getRuleContexts<CHTLJSParser::StatementContext>();
}

CHTLJSParser::StatementContext* CHTLJSParser::ProgramContext::statement(size_t i) {
  return getRuleContext<CHTLJSParser::StatementContext>(i);
}


size_t CHTLJSParser::ProgramContext::getRuleIndex() const {
  return CHTLJSParser::RuleProgram;
}

void CHTLJSParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void CHTLJSParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any CHTLJSParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJSVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

CHTLJSParser::ProgramContext* CHTLJSParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, CHTLJSParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 9151318944303219646) != 0) || _la == CHTLJSParser::TILDE) {
      setState(102);
      statement();
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(108);
    match(CHTLJSParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CHTLJSParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLJSParser::ExpressionStatementContext* CHTLJSParser::StatementContext::expressionStatement() {
  return getRuleContext<CHTLJSParser::ExpressionStatementContext>(0);
}

CHTLJSParser::DeclarationStatementContext* CHTLJSParser::StatementContext::declarationStatement() {
  return getRuleContext<CHTLJSParser::DeclarationStatementContext>(0);
}

CHTLJSParser::ControlStatementContext* CHTLJSParser::StatementContext::controlStatement() {
  return getRuleContext<CHTLJSParser::ControlStatementContext>(0);
}

CHTLJSParser::ChthljsStatementContext* CHTLJSParser::StatementContext::chthljsStatement() {
  return getRuleContext<CHTLJSParser::ChthljsStatementContext>(0);
}


size_t CHTLJSParser::StatementContext::getRuleIndex() const {
  return CHTLJSParser::RuleStatement;
}

void CHTLJSParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void CHTLJSParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any CHTLJSParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJSVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

CHTLJSParser::StatementContext* CHTLJSParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, CHTLJSParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(114);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(110);
      expressionStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(111);
      declarationStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(112);
      controlStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(113);
      chthljsStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionStatementContext ------------------------------------------------------------------

CHTLJSParser::ExpressionStatementContext::ExpressionStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLJSParser::ExpressionContext* CHTLJSParser::ExpressionStatementContext::expression() {
  return getRuleContext<CHTLJSParser::ExpressionContext>(0);
}

tree::TerminalNode* CHTLJSParser::ExpressionStatementContext::SEMICOLON() {
  return getToken(CHTLJSParser::SEMICOLON, 0);
}


size_t CHTLJSParser::ExpressionStatementContext::getRuleIndex() const {
  return CHTLJSParser::RuleExpressionStatement;
}

void CHTLJSParser::ExpressionStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpressionStatement(this);
}

void CHTLJSParser::ExpressionStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpressionStatement(this);
}


std::any CHTLJSParser::ExpressionStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJSVisitor*>(visitor))
    return parserVisitor->visitExpressionStatement(this);
  else
    return visitor->visitChildren(this);
}

CHTLJSParser::ExpressionStatementContext* CHTLJSParser::expressionStatement() {
  ExpressionStatementContext *_localctx = _tracker.createInstance<ExpressionStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, CHTLJSParser::RuleExpressionStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    expression();
    setState(118);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(117);
      match(CHTLJSParser::SEMICOLON);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationStatementContext ------------------------------------------------------------------

CHTLJSParser::DeclarationStatementContext::DeclarationStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLJSParser::VariableDeclarationContext* CHTLJSParser::DeclarationStatementContext::variableDeclaration() {
  return getRuleContext<CHTLJSParser::VariableDeclarationContext>(0);
}

CHTLJSParser::FunctionDeclarationContext* CHTLJSParser::DeclarationStatementContext::functionDeclaration() {
  return getRuleContext<CHTLJSParser::FunctionDeclarationContext>(0);
}


size_t CHTLJSParser::DeclarationStatementContext::getRuleIndex() const {
  return CHTLJSParser::RuleDeclarationStatement;
}

void CHTLJSParser::DeclarationStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclarationStatement(this);
}

void CHTLJSParser::DeclarationStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclarationStatement(this);
}


std::any CHTLJSParser::DeclarationStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJSVisitor*>(visitor))
    return parserVisitor->visitDeclarationStatement(this);
  else
    return visitor->visitChildren(this);
}

CHTLJSParser::DeclarationStatementContext* CHTLJSParser::declarationStatement() {
  DeclarationStatementContext *_localctx = _tracker.createInstance<DeclarationStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, CHTLJSParser::RuleDeclarationStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(122);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CHTLJSParser::VAR:
      case CHTLJSParser::LET:
      case CHTLJSParser::CONST: {
        enterOuterAlt(_localctx, 1);
        setState(120);
        variableDeclaration();
        break;
      }

      case CHTLJSParser::FUNCTION: {
        enterOuterAlt(_localctx, 2);
        setState(121);
        functionDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ControlStatementContext ------------------------------------------------------------------

CHTLJSParser::ControlStatementContext::ControlStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLJSParser::IfStatementContext* CHTLJSParser::ControlStatementContext::ifStatement() {
  return getRuleContext<CHTLJSParser::IfStatementContext>(0);
}

CHTLJSParser::ForStatementContext* CHTLJSParser::ControlStatementContext::forStatement() {
  return getRuleContext<CHTLJSParser::ForStatementContext>(0);
}

CHTLJSParser::WhileStatementContext* CHTLJSParser::ControlStatementContext::whileStatement() {
  return getRuleContext<CHTLJSParser::WhileStatementContext>(0);
}

CHTLJSParser::SwitchStatementContext* CHTLJSParser::ControlStatementContext::switchStatement() {
  return getRuleContext<CHTLJSParser::SwitchStatementContext>(0);
}


size_t CHTLJSParser::ControlStatementContext::getRuleIndex() const {
  return CHTLJSParser::RuleControlStatement;
}

void CHTLJSParser::ControlStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterControlStatement(this);
}

void CHTLJSParser::ControlStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitControlStatement(this);
}


std::any CHTLJSParser::ControlStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJSVisitor*>(visitor))
    return parserVisitor->visitControlStatement(this);
  else
    return visitor->visitChildren(this);
}

CHTLJSParser::ControlStatementContext* CHTLJSParser::controlStatement() {
  ControlStatementContext *_localctx = _tracker.createInstance<ControlStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, CHTLJSParser::RuleControlStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(128);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CHTLJSParser::IF: {
        enterOuterAlt(_localctx, 1);
        setState(124);
        ifStatement();
        break;
      }

      case CHTLJSParser::FOR: {
        enterOuterAlt(_localctx, 2);
        setState(125);
        forStatement();
        break;
      }

      case CHTLJSParser::WHILE: {
        enterOuterAlt(_localctx, 3);
        setState(126);
        whileStatement();
        break;
      }

      case CHTLJSParser::SWITCH: {
        enterOuterAlt(_localctx, 4);
        setState(127);
        switchStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChthljsStatementContext ------------------------------------------------------------------

CHTLJSParser::ChthljsStatementContext::ChthljsStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLJSParser::FileloaderStatementContext* CHTLJSParser::ChthljsStatementContext::fileloaderStatement() {
  return getRuleContext<CHTLJSParser::FileloaderStatementContext>(0);
}

CHTLJSParser::ListenStatementContext* CHTLJSParser::ChthljsStatementContext::listenStatement() {
  return getRuleContext<CHTLJSParser::ListenStatementContext>(0);
}

CHTLJSParser::DelegateStatementContext* CHTLJSParser::ChthljsStatementContext::delegateStatement() {
  return getRuleContext<CHTLJSParser::DelegateStatementContext>(0);
}

CHTLJSParser::AnimateStatementContext* CHTLJSParser::ChthljsStatementContext::animateStatement() {
  return getRuleContext<CHTLJSParser::AnimateStatementContext>(0);
}

CHTLJSParser::VirStatementContext* CHTLJSParser::ChthljsStatementContext::virStatement() {
  return getRuleContext<CHTLJSParser::VirStatementContext>(0);
}

CHTLJSParser::RouterStatementContext* CHTLJSParser::ChthljsStatementContext::routerStatement() {
  return getRuleContext<CHTLJSParser::RouterStatementContext>(0);
}

CHTLJSParser::UtilStatementContext* CHTLJSParser::ChthljsStatementContext::utilStatement() {
  return getRuleContext<CHTLJSParser::UtilStatementContext>(0);
}


size_t CHTLJSParser::ChthljsStatementContext::getRuleIndex() const {
  return CHTLJSParser::RuleChthljsStatement;
}

void CHTLJSParser::ChthljsStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChthljsStatement(this);
}

void CHTLJSParser::ChthljsStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChthljsStatement(this);
}


std::any CHTLJSParser::ChthljsStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJSVisitor*>(visitor))
    return parserVisitor->visitChthljsStatement(this);
  else
    return visitor->visitChildren(this);
}

CHTLJSParser::ChthljsStatementContext* CHTLJSParser::chthljsStatement() {
  ChthljsStatementContext *_localctx = _tracker.createInstance<ChthljsStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, CHTLJSParser::RuleChthljsStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(137);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CHTLJSParser::FILELOADER: {
        enterOuterAlt(_localctx, 1);
        setState(130);
        fileloaderStatement();
        break;
      }

      case CHTLJSParser::LISTEN: {
        enterOuterAlt(_localctx, 2);
        setState(131);
        listenStatement();
        break;
      }

      case CHTLJSParser::DELEGATE: {
        enterOuterAlt(_localctx, 3);
        setState(132);
        delegateStatement();
        break;
      }

      case CHTLJSParser::ANIMATE: {
        enterOuterAlt(_localctx, 4);
        setState(133);
        animateStatement();
        break;
      }

      case CHTLJSParser::VIR: {
        enterOuterAlt(_localctx, 5);
        setState(134);
        virStatement();
        break;
      }

      case CHTLJSParser::ROUTER: {
        enterOuterAlt(_localctx, 6);
        setState(135);
        routerStatement();
        break;
      }

      case CHTLJSParser::UTIL: {
        enterOuterAlt(_localctx, 7);
        setState(136);
        utilStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

CHTLJSParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLJSParser::AssignmentExpressionContext* CHTLJSParser::ExpressionContext::assignmentExpression() {
  return getRuleContext<CHTLJSParser::AssignmentExpressionContext>(0);
}


size_t CHTLJSParser::ExpressionContext::getRuleIndex() const {
  return CHTLJSParser::RuleExpression;
}

void CHTLJSParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void CHTLJSParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


std::any CHTLJSParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJSVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

CHTLJSParser::ExpressionContext* CHTLJSParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 12, CHTLJSParser::RuleExpression);
